@@ -1,3 +1,8 @@
+Sat Oct 26 06:35:41 2013  Masaya Tarui  <tarui@ruby-lang.org>
+
+	* gc.c (gc_before_heap_sweep): Restructure code to mean clearly.
+	  heap->freelist is connected to end of list.
+
 Sat Oct 26 04:01:35 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (gc_before_heap_sweep): fix freelist management.
